--- a/client-next/.env.example
+++ b/client-next/.env.example
@@ -1,7 +1,7 @@
-# Frontend Environment Variables
-NEXT_PUBLIC_PROJECT_ID=your_reown_project_id_here
+# B402 Gasless Configuration
+BSC_RPC_URL=https://bsc-dataseed1.binance.org/
+FACILITATOR_PRIVATE_KEY=your_facilitator_private_key_here
+CONTRACT_ADDRESS=your_token_contract_address_here
 
-# Backend Environment Variables (Server-side only)
-BSC_RPC_URL=https://bsc-dataseed.binance.org
-PRIVATE_KEY=your_64_char_private_key_here
-MINT_CONTRACT_ADDRESS=0xYourDeployedContractAddress
+# Optional: For development/testing
+NEXT_PUBLIC_PROJECT_ID=your_walletconnect_project_id_here
