--- a/client-next/.env.example
+++ b/client-next/.env.example
@@ -1,7 +1,13 @@
-# B402 Gasless Configuration
+# Frontend Environment Variables
+
+# Client-side accessible variables (exposed to browser)
+NEXT_PUBLIC_BSC_RPC_URL=https://bsc-dataseed1.binance.org/
+NEXT_PUBLIC_CONTRACT_ADDRESS=your_token_contract_address_here
+
+# Server-side only variables (secure, not exposed to browser)
 BSC_RPC_URL=https://bsc-dataseed1.binance.org/
 FACILITATOR_PRIVATE_KEY=your_facilitator_private_key_here
 CONTRACT_ADDRESS=your_token_contract_address_here
 
-# Optional: For development/testing
-NEXT_PUBLIC_PROJECT_ID=your_walletconnect_project_id_here
+# Token addresses
+USD1_TOKEN_ADDRESS=your_usd1_token_address_here
